@@ -148,7 +148,7 @@ Show and reset stats every <sec> seconds
 .TP
 .B
 \fB--stats-range\fP
-Collect/show range histogram
+Collect range statistics for polar plot.
 .TP
 .B
 \fB--write-json\fP=<dir>
