@@ -118,9 +118,6 @@ struct stats {
 };
 
 struct range_stats {
-    // range histogram
-#define RANGE_BUCKET_COUNT 76
-    uint32_t range_histogram[RANGE_BUCKET_COUNT];
     // Maximum polar ranges
 #define POLAR_RANGE_RESOLUTION 5 // degree
 #define POLAR_RANGE_BUCKETS (360 / POLAR_RANGE_RESOLUTION)
